export enum Nivel {
     Baja,
     Media,
     Alta,
     Elevada,
     Excelente,
     Extrema,
     Afectada
}

